# echo-chat

./: .gitignore  .travis.yml  Doxyfile  LICENSE.md  Makefile.am  README.md  configure.ac  pre-commit.sh
docs/: contributing.dox  license.dox  mainpage.dox
include/: bagarray.h  echoclientcontext.h  echoservercontext.h  tcpcontext.h
src/: bagarray.c  client.c  echoclientcontext.c  echoservercontext.c  server.c  tcpcontext.c
tests/: test1.c  test2.c  test3.c
